--- a/package.json
+++ b/package.json
@@ -4,25 +4,37 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lite-server": "lite-server"
+    "build": "webpack",
+    "start:dev": "webpack-devb-server",
+    "lite-server": "lite-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/trfina/budget-tracker.git"
   },
-  "author": "",
+  "author": "Tammy Fina",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/trfina/budget-tracker/issues"
   },
-  "homepage": "https://github.com/trfina/budget-tracker#readme",
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
+    "webpack": "^4.32.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-pwa-manifest": "^4.3.0"
+  },
   "dependencies": {
     "bootstrap": "^4.6.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "sw-precache-webpack-plugin": "^1.0.0"
   }
 }
